--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!-- Write your HTML in this file -->
 <!DOCTYPE html>
 <html>
-  <h1> </h1>
+  <head>
+        <!-- metadata about the HTML document as a whole -->
+ 
+    </head>
+ 
+    <body>
+        <!-- content of our page will be here! -->
+ 
+    </body>
   
   
 </html>
