Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <h1> </h1>
+    <title> General Kenobi...Hello There! </title>
         <!-- metadata about the HTML document as a whole -->
  
     </head>
